--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,23 @@
---- 
-author: 
-  - Martin Thurn <mthurn@cpan.org>
-build_requires: 
+---
+author:
+  - 'Martin Thurn <mthurn@cpan.org>'
+build_requires:
   File::Basename: 0
   Test::More: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
   Test::Simple: 0
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.75'
 license: perl
-meta-spec: 
+meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
 name: Lingua-Alphabet-Phonetic
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   perl: 5.004
-version: 0.056
+version: 0.101
