--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,7 @@
 ---
+abstract: 'map ABC''s to phonetic alphabets'
 author:
-  - 'Martin Thurn <mthurn@cpan.org>'
+  - 'Martin Thurn (mthurn@cpan.org).'
 build_requires:
   File::Basename: 0
   Test::More: 0
@@ -8,11 +9,12 @@ build_requires:
   Test::Pod::Coverage: 0
   Test::Simple: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.75'
+generated_by: 'Module::Install version 0.76'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+module_name: Lingua::Alphabet::Phonetic
 name: Lingua-Alphabet-Phonetic
 no_index:
   directory:
@@ -20,4 +22,6 @@ no_index:
     - t
 requires:
   perl: 5.004
-version: 0.102
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.103
